--- a/app/assets/stylesheets/comments.css.less
+++ b/app/assets/stylesheets/comments.css.less
@@ -56,6 +56,12 @@
       height: 52px;
     }
   }
+  .comment-submit {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: none;
+  }
 }
 .comment-block {
   margin-bottom: 20px;
