--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -97,6 +97,6 @@
     </div>
   </div>
   <div class="pull-left" style="height: 260px; position: relative;">
-    <a href="###" class="about_us" style="position: absolute; bottom: -50px; left: -10px;"></a>
+    <a href="<%= about_path %>" class="about_us" style="position: absolute; bottom: -50px; left: -10px;"></a>
   </div>
 </div>
