--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div id="timeline" data-toggle="tabs">
-  <% if @user.articles.count %>
+  <% if @user.articles.count > 0 %>
     <div class="tabs-nav">
       <a href="#feeds" class="tabs-item active">TA的动态</a>
       <a href="#articles" class="tabs-item">TA的发布</a>
@@ -26,15 +26,12 @@
           </td>
           <td class="content">
             <%= raw feed.content %>
-           <!--  关注了
-            <a href="###" class="link">调查</a> 中的文章
-            <a href="###" class="timeline-link">《听听纽带的声音》</a> -->
           </td>
         </tr>
       <% end %>
     </table>
   </div>
-  <% if @user.articles.count %>
+  <% if @user.articles.count > 0 %>
     <div id="articles" style="display: none; padding: 0 40px 30px;">
       <table>
         <% @user.articles.each do |article| %>
