--- a/app/assets/stylesheets/articles.css.less
+++ b/app/assets/stylesheets/articles.css.less
@@ -2,8 +2,19 @@
 // They will automatically be included in application.css.
 // You can use Less here: http://lesscss.org/
 
+@import "todc-bootstrap/variables";
+
 .article-content {
   img {
     max-width: 100%;
+  }
+  a {
+    color: @linkColor;
+    text-decoration: none;
+    &:hover,
+    &:focus {
+      color: @linkColorHover;
+      text-decoration: none;
+    }
   }
 }
