--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,14 +1,16 @@
 <div class="comments-wrapper">
 <h2 id="comments">评论</h2>
-<div class="avatar pull-left">
-  <%= image_tag((current_user ? current_user.avatar : asset_path("avatar_default.jpg")), class: "avatar-inner") %>
-</div>
-<div class="tri ml100 hov">
-  <%= form_for [commentable, @comment] do |f| %>
-    <%= f.text_area :content, style: "width: 488px;", rows: 3, placeholder: "输入评论，按 Ctrl + Enter 提交" %>
-    <%= f.submit "评论", class: "btn comment-submit" %>
-  <% end -%>
-</div>
+<% if current_user %>
+  <div class="avatar pull-left">
+    <%= image_tag((current_user ? current_user.avatar : asset_path("avatar_default.jpg")), class: "avatar-inner") %>
+  </div>
+  <div class="tri ml100 hov">
+    <%= form_for [commentable, @comment] do |f| %>
+      <%= f.text_area :content, style: "width: 488px;", rows: 3, placeholder: "输入评论，按 Ctrl + Enter 提交" %>
+      <%= f.submit "评论", class: "btn comment-submit" %>
+    <% end -%>
+  </div>
+<% end -%>
 <% commentable.comments.each do |comment| %>
 <div class="comment-block" id="<%= comment.id %>">
 <div class="avatar pull-left">
@@ -22,9 +24,11 @@
 </div>
 <div class="controls ml100 tri">
   <div class="toolbox">
+    <% if current_user %>
     <a href="###" class="reply">
       <i class="icon-reply"></i>
     </a>
+    <% end -%>
     <% if current_user && current_user.is_admin? %>
     <%= link_to [commentable, comment], method: :delete, data: { confirm: "确认删除吗？" } do %>
       <i class="icon-trash"></i>
@@ -59,9 +63,11 @@
       </div>
       <div class="controls ml100 tri">
         <div class="toolbox">
+          <% if current_user %>
           <a href="###" class="reply">
             <i class="icon-reply"></i>
           </a>
+          <% end -%>
           <% if current_user && current_user.is_admin? %>
           <%= link_to eval("#{commentable.class.to_s.downcase}_subcomment_path(commentable, comment, subcomment)"), method: :delete, data: { confirm: "确认删除吗？" } do %>
             <i class="icon-trash"></i>
@@ -84,6 +90,7 @@
     </div>
   </div>
   <% end -%>
+  <% if current_user %>
   <div class="comment-block subcom" style="display: none;">
     <div class="ml100">
       <div class="avatar pull-left">
@@ -97,6 +104,7 @@
       </div>
     </div>
   </div>
+  <% end -%>
 <% end -%>
 </div>
 
