--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -27,6 +27,12 @@
       </fieldset>
     </div>
   </div>
+  <div class="control-group">
+    <%= f.label :max_vote, class: "control-label" %>
+    <div class="controls">
+      <%= f.text_field :max_vote, style: "width: 480px;" %>
+    </div>
+  </div>
 
   <div class="controls">
     <%= f.submit @vote.new_record ? "新增" : "更新", class: "btn btn-danger" %>
