--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -24,16 +24,43 @@
       </tr>
     </table>
   <% end -%>
+<% elsif @vote.max_vote > 1 %>
+  <%= form_tag vote_options_path(@vote), method: :post, class: "multiple-vote", max: @vote.max_vote do %>
+    <table class="vote-table">
+      <% @vote.options.each do |opt| %>
+      <tr>
+        <td style="width: 20px; padding-right: 0px;">
+          <%= check_box_tag "options[]", opt.id, false, id: "options_#{opt.id}"  %>
+        </td>
+        <td style="width: 130px; padding-left: 0px;">
+          <%= label_tag "options_#{opt.id}", opt.content %>
+        </td>
+        <td style="width: 360px;">
+          <div class="progress progress-warning" style="margin: 0px;">
+            <div class="bar" style="width: <%= (opt.count * 100.0 / @vote.voters.count).to_s + "%" %>">
+            </div>
+          </div>
+        </td>
+        <td style="width: 40px;">
+          <%= opt.count %>
+        </td>
+      </tr>
+      <% end -%>
+    </table>
+    <div style="margin: 5px 0 0 20px;">
+      <%= submit_tag "投票", class: "btn btn-danger" %>
+    </div>
+  <% end %>
 <% else %>
   <%= form_tag vote_options_path(@vote), method: :post do %>
     <table class="vote-table">
       <% @vote.options.each do |opt| %>
       <tr>
         <td style="width: 20px; padding-right: 0px;">
-          <%= radio_button_tag "option", opt.id %>
+          <%= radio_button_tag "options[]", opt.id, false, id: "options_#{opt.id}" %>
         </td>
         <td style="width: 130px; padding-left: 0px;">
-          <%= label_tag "option_" + opt.id, opt.content %>
+          <%= label_tag "options_#{opt.id}", opt.content %>
         </td>
         <td style="width: 360px;">
           <div class="progress progress-warning" style="margin: 0px;">
