--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,4 @@
-<div style="padding: 50px; width: 250px;">
+<div style="padding: 50px; width: 250px; white-space: pre-wrap;">
 <legend style="color: white;">关于我们</legend>
   <p><%= @about %></p>
 </div>
