--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -22,7 +22,7 @@
   <% @articles.each do |article| %>
     <tr>
       <td><%= article.category.name %></td>
-      <td><%= link_to article.title, article_path(article, from: "index"), class: "link", remote: true %></td>
+      <td><%= link_to (article.anonymous ? "#{article.title}（匿名）" : article.title), article_path(article, from: "index"), class: "link", remote: true %></td>
       <td class="w30"><%= link_to '通过', verify_article_path(article), class: "link", remote: true %></td>
       <td class="w30"><%= link_to '编辑', edit_article_path(article), class: "link" %></td>
       <td class="w30"><%= link_to '删除', destroy_article_path(article), remote: true, data: { confirm: '确认删除吗？' }, class: "link" %></td>
