--- a/app/views/features/show.html.erb
+++ b/app/views/features/show.html.erb
@@ -20,7 +20,13 @@
   <div class="category-block">
     <h3 style="line-height: 1.3; margin-top: 0;"><%= link_to article.title, article %></h3>
     <p class="muted">
-      作者：<%= link_to article.author.nickname, article.author, class: "muted" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em><%= short_time(article.created_at) %> </em>
+      <% if article.anonymous %>
+        作者：匿名用户
+      <% else %>
+        作者：<%= link_to article.author.nickname, article.author, class: "muted" %>
+      <% end -%>
+      &nbsp;&nbsp;&nbsp;&nbsp;
+      <em><%= short_time(article.created_at) %> </em>
     </p>
     <p>
       <%= article.digest(100) %>
