--- a/app/views/users/publishes.html.erb
+++ b/app/views/users/publishes.html.erb
@@ -24,9 +24,9 @@
     <tr>
       <td><%= article.category.name %></td>
       <% if article.is_verified? %>
-      <td><%= link_to article.title, article_path(article), class: "link" %></td>
+      <td><%= link_to (article.anonymous ? "#{article.title}（匿名）" : article.title), article_path(article), class: "link" %></td>
       <% else %>
-      <td><%= link_to article.title, article_path(article), class: "link", remote: true %></td>
+      <td><%= link_to (article.anonymous ? "#{article.title}（匿名）" : article.title), article_path(article), class: "link", remote: true %></td>
       <% end -%>
       <% if article.is_verified? %>
       <td colspan="2">已发布</td>
