--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -12,7 +12,7 @@
       &nbsp;&nbsp;&nbsp;&nbsp;<em><%= short_time(article.created_at) %> </em>
     </p>
     <p>
-      <%= article.digest(90) %>
+      <%= article.digest(110-1.5*article.title.length) %>
     </p>
     <div style="position: absolute; bottom: 20px; right: 20px;">
       <a href="<%= article_path(article, anchor: 'comments') %>" class="comments">
