--- a/app/views/features/show.html.erb
+++ b/app/views/features/show.html.erb
@@ -17,7 +17,7 @@
 <div class="clearfix" style="position: relative; margin-left: -15px;">
 <% @feature.articles.recent.each do |article| %>
   <div class="verl"></div>
-  <div class="category-block">
+  <div class="category-block" style="position: relative">
     <h3 style="line-height: 1.3; margin-top: 0;"><%= link_to article.title, article %></h3>
     <p class="muted">
       <% if article.anonymous %>
@@ -29,9 +29,9 @@
       <em><%= short_time(article.created_at) %> </em>
     </p>
     <p>
-      <%= article.digest(100) %>
+      <%= article.digest(110-1.5*article.title.length) %>
     </p>
-    <div class="pull-right">
+    <div style="position: absolute; bottom: 20px; right: 20px;">
       <a href="<%= article_path(article, anchor: 'comments') %>" class="comments">
         <i class="icon-comment"></i>(<%= article.comments.count %>)
       </a>
