--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -105,7 +105,7 @@
           <div style="font-size: 18px; line-height: 24px; margin-bottom: 5px;"><%= link_to @vote.title, @vote %></div>
           <% @vote.options.each do |opt| %>
             <div class="mt10">
-              <%= label_tag "options_#{opt.id}", opt.content, class: "vote", style: "width: 220px; vertical-align: middle;" %>
+              <%= label_tag "options_#{opt.id}", opt.content, class: "vote" %>
             </div>
           <% end %>
         </div>
@@ -119,7 +119,7 @@
           <% @vote.options.each do |opt| %>
             <div class="mt10">
               <%= check_box_tag "options[]", opt.id, false, id: "options_#{opt.id}"  %>
-              <%= label_tag "options_#{opt.id}", opt.content, class: "vote", style: "width: 200px; vertical-align: middle;" %>
+              <%= label_tag "options_#{opt.id}", opt.content, class: "vote", style: "margin-left: 3px; max-width: 180px; vertical-align: middle;" %>
             </div>
           <% end %>
         </div>
@@ -135,7 +135,7 @@
           <% @vote.options.each do |opt| %>
             <div class="mt10">
               <%= radio_button_tag "options[]", opt.id, false, id: "options_#{opt.id}" %>
-              <%= label_tag "options_#{opt.id}", opt.content, class: "vote", style: "margin-left: 3px;" %>
+              <%= label_tag "options_#{opt.id}", opt.content, class: "vote", style: "margin-left: 3px; max-width: 180px; vertical-align: middle;" %>
             </div>
           <% end %>
         </div>
