--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -4,9 +4,9 @@
   <% @votes.hottest[0..8].each do |vote| %>
     <% data = vote.options.map{|a|a.count}.each_with_index.max %>
     <% break if data[0] == 0 %>
-    <% next if vote.voters.count == 0 %>
+    <% next if vote.voters_count == 0 %>
     <div class="mb10">
-      <span style="font: 28px 'Times New Roman'; font-style: italic; " class="text-error"><%= data[0] * 100 / vote.voters.count %>%</span>
+      <span style="font: 28px 'Times New Roman'; font-style: italic; " class="text-error"><%= data[0] * 100 / vote.voters_count %>%</span>
       的人在 <%= link_to vote.title, vote %> 中选择了 <%= vote.options[data[1]].content %>
     </div>
   <% end -%>
@@ -15,14 +15,14 @@
 <% @votes.recent.each do |vote| %>
   <div class="vote-block clearfix">
   <h3 class="m0"><%= link_to vote.title, vote %></h3>
-  <% if !current_user or (current_user and vote.already_voted_by? current_user) %>
+  <% if !can_vote?(vote) %>
   <table>
     <% vote.options.each do |opt| %>
     <tr>
       <td style="padding: 5px; width: 130px;"><%= opt.content %></td>
       <td style="padding: 5px; width: 180px;">  
         <div class="progress progress-warning" style="margin: 0px;">
-          <div class="bar" style="width: <%= (opt.count * 100.0 / vote.voters.count).to_s + "%" %>">
+          <div class="bar" style="width: <%= (opt.count * 100.0 / vote.voters_count).to_s + "%" %>">
           </div>
         </div>
       </td>
