--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -5,7 +5,7 @@
   <%= @vote.content %>
 </div>
 <% end -%>
-<% if !current_user or @vote.already_voted_by? current_user %>
+<% if !can_vote?(@vote) %>
   <% @vote.options.each do |opt| %>
     <table class="vote-table">
       <tr>
@@ -14,7 +14,7 @@
         </td>
         <td style="width: 380px;">
           <div class="progress progress-warning" style="margin: 0px;">
-            <div class="bar" style="width: <%= (opt.count * 100.0 / @vote.voters.count).to_s + "%" %>">
+            <div class="bar" style="width: <%= (opt.count * 100.0 / @vote.voters_count).to_s + "%" %>">
             </div>
           </div>
         </td>
@@ -37,7 +37,7 @@
         </td>
         <td style="width: 360px;">
           <div class="progress progress-warning" style="margin: 0px;">
-            <div class="bar" style="width: <%= (opt.count * 100.0 / @vote.voters.count).to_s + "%" %>">
+            <div class="bar" style="width: <%= (opt.count * 100.0 / @vote.voters_count).to_s + "%" %>">
             </div>
           </div>
         </td>
@@ -64,7 +64,7 @@
         </td>
         <td style="width: 360px;">
           <div class="progress progress-warning" style="margin: 0px;">
-            <div class="bar" style="width: <%= (opt.count * 100.0 / @vote.voters.count).to_s + "%" %>">
+            <div class="bar" style="width: <%= (opt.count * 100.0 / @vote.voters_count).to_s + "%" %>">
             </div>
           </div>
         </td>
