--- a/app/views/layouts/_user.html.erb
+++ b/app/views/layouts/_user.html.erb
@@ -51,7 +51,8 @@
     <i class="icon-signin"></i>
   < end -%>
   -->
-  <%= link_to '/auth/bdfzer', class: "login link" do %>
+  <a class="login_link" href="/auth/bdfzer">
     <i class="icon-signin"></i>
-  <% end %>
+  </a>
+  
 <% end -%>
